DAY-4/IngressResourceFile.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 3-tier-architecture-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /  # Optional: Remove /api prefix
  
spec:
  ingressClassName: nginx  # Add this line to specify the IngressClass
  rules:
    - host: "localhost"
      http:
        paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 7000  # This should be match with the service port not with the container port 
    - host: "localhost"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 80  # This should be match with the service port not with the container port
